<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView

        android:id="@+id/task_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:text="@string/task_of_app"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/task" />

    <EditText
        android:id="@+id/edt_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_text"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:hint="@string/edt_hint"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp"
        android:text="@string/convert_to_anagram"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_convert"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:visibility="visible" />


</RelativeLayout>